--- a/STM32F4/Flight_Controller_960/.project
+++ b/STM32F4/Flight_Controller_960/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Flight Controller</name>
+	<name>Flight_Controller_960</name>
 	<comment></comment>
 	<projects>
 	</projects>
